apps/lychee/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lychee
  labels:
    name: lychee
