apps/lychee/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lychee
  namespace: lychee
  labels:
    app: lychee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lychee
  template:
    metadata:
      labels:
        app: lychee
    spec:
      containers:
      - image: linuxserver/lychee:5.1.2
        name: lychee
        volumeMounts:
        - name: lychee-uploads
          mountPath: "/pictures"
        - name: lychee-config
          mountPath: "/config"
        - name: lychee-sqlite
          mountPath: "/lychee/db"
        ports:
          - containerPort: 80
            name: http 
            protocol: TCP    
      volumes:
      - name: lychee-sym
        persistentVolumeClaim:
          claimName: lychee-sym-pvc
      - name: lychee-sqlite
        persistentVolumeClaim:
          claimName: lychee-sqlite-pvc
      - name: lychee-uploads
        persistentVolumeClaim:
          claimName: lychee-uploads-pvc
      - name: lychee-config
        persistentVolumeClaim:
          claimName: lychee-config-pvc
