apps/lychee/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lychee
  namespace: lychee
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: lychee
  type: ClusterIP
